  - is_abundant?/1 - Is a number `n` an Abundant number
  - next_abundant/1 - Find the next abundant number after `n`
  - is_perfect?/1 - Is a number `n` a perfect number
  - is_deficient?/1 - Is a number `n` a deficient number
  - next_deficient/1 - Find the next deficient number
  - is_arithmetic_number?/1 - Is a number `n` an arithmetic number
  - aliquot_sum/1 - Aliquot Sum of `n`
  
### New Sequences
 
 - A001065 - Aliquot parts of N
 - A005101 - Abundant Numbers
 - A000396 - Perfect Numbers
 - A005100 - Deficient Numbers
 - A003601 - Arithmetic Numbers

## v0.8.0

### Changes/Refactorizations

### Enhancements

 - Chunky.Sequence
  - sequences are now marked as finite or infinite (as computable/stored in Squence library)
  - sequences can now have initial index/offset other than 0 (like A000593)
  - New Functions:
   - `is_finite?/1` - Is a sequence finite or infinite is sequence library?
 - Chunky.Math
  - `factors/1` - All divisors of N
  - `sigma/1` - Sigma-1 function of factors of N
  - `sigma/2` - Generalized Sigma function
  - `pow/2` - Pure integer exponentiation
  
### New Sequences

 - A000593 - Sum of Odd Divisors of N
 - A000009 - Number of partitions of n into distinct parts
 - A000079 - Powers of 2
 - A000203 - Sigma-1 of N
 - A001057 through A001060 - sigma2 through sigma5 of N
 - A013954 through A013968 - sigma6 through sigma20 of N
 
 
## v0.7.0

### Enhancements

 - `Chunky.Math` - Extended math for integers and floating point
  - `pow/3` - Modular arithmetic exponentiation
  - `is_prime?/1` - Primality test for integers
  - `prime_factors/1` - Factorize an integer to prime factors
  
 - `Chunky.Sequences` - Create, inspect, manipulate, iterate, and compare finite and infinite value sequences
  - New functions:
   - `create/3` - Create a new sequence instance
   - `available/0` - List all loaded sequences from all loaded applications and modules
   - `available/1` - List available sequences from a module